fix(review): [major] Narrow broad exception catches, fix return type and topic defaults
- Narrow except Exception to (ValidationError, TypeError) in hook payload
  parsing so schema corruption errors propagate instead of being masked
- Narrow except Exception in _fetch_session_snapshot to infrastructure
  errors only (TimeoutError, OSError, PostgresConnectionError, etc.)
- Fix _reshape_flat_hook_payload return type from object to ModelClaudeCodeHookEvent
- Remove default from publish_topic parameter to force explicit topic resolution
- Fix license header MIT -> Apache-2.0 for consistency
- Add contract.yaml comment clarifying schema_ref vs runtime dispatch

--- a/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
@@ -91,6 +91,12 @@ event_bus:
     - "{env}.onex.evt.omniintelligence.pattern-learned.v1"
 
   # Metadata for subscribed topics
+  #
+  # NOTE: schema_ref documents the expected payload shape for documentation and
+  # contract introspection purposes. At runtime, the dispatch handler receives
+  # raw dict payloads from the Kafka envelope and validates required fields
+  # (session_id, correlation_id) directly in the handler -- it does NOT
+  # deserialize into the referenced model class.
   subscribe_topic_metadata:
     "{env}.onex.cmd.omniintelligence.pattern-learning.v1":
       schema_ref: "omniintelligence.nodes.node_claude_hook_event_effect.models.model_output.ModelPatternLearningCommand"
