fix(review): [major] Deduplicate tools_used list, clarify batch semantics and schema_ref
- Apply dict.fromkeys() deduplication to tools_used in _fetch_session_snapshot
  (consistent with files_accessed/files_modified deduplication)
- Add docstring to PUBLISH_BATCH_SIZE explaining it's for log grouping and
  error isolation, not transport-level batching
- Add documentation note to contract.yaml publish schema_ref clarifying it's
  a reference only, actual payload defined by handler

--- a/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
@@ -105,9 +105,15 @@ event_bus:
       content_type: "application/json"
 
   # Metadata for published topics
+  #
+  # NOTE: schema_ref is a documentation reference only. The actual published
+  # payload shape is a plain dict defined by
+  # _transform_insights_to_pattern_events() in
+  # omniintelligence.runtime.dispatch_handler_pattern_learning -- it does NOT
+  # serialize a ModelPatternStorageInput instance.
   publish_topic_metadata:
     "{env}.onex.evt.omniintelligence.pattern-learned.v1":
-      schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternStorageInput"
+      schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternStorageInput (documentation only)"
       description: "Learned pattern events containing extracted pattern data ready
         for persistence by the pattern storage effect node."
       content_type: "application/json"
