fix(review): [major] Catch PatternExtractionError, fix timestamp precedence and schema_ref
- Catch PatternExtractionError in pattern learning handler to prevent
  infinite retry of deterministically failing computations
- Guard emitted_at->timestamp_utc mapping so explicit timestamp_utc
  takes precedence when both fields are present
- Remove inline "(documentation only)" from schema_ref value (NOTE
  comment already documents this)

--- a/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
@@ -113,7 +113,7 @@ event_bus:
   # serialize a ModelPatternStorageInput instance.
   publish_topic_metadata:
     "{env}.onex.evt.omniintelligence.pattern-learned.v1":
-      schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternStorageInput (documentation only)"
+      schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternStorageInput"
       description: "Learned pattern events containing extracted pattern data ready
         for persistence by the pattern storage effect node."
       content_type: "application/json"
