fix(review): [major] revert --no-deps that breaks detect-secrets runtime
detect-secrets requires pyyaml and requests at runtime. The --no-deps
flag prevents their installation, causing ImportError on CI. The version
pin alone provides sufficient supply-chain protection on ephemeral runners.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -637,7 +637,7 @@ jobs:
       # detect-secrets is a CI-only scanning tool, not a project dependency.
       # Installed via pip (not uv) because it is not declared in pyproject.toml.
       - name: Install detect-secrets
-        run: pip install --no-deps detect-secrets==1.5.0
+        run: pip install detect-secrets==1.5.0
 
       - name: Run detect-secrets-hook
         run: |
