feat(OMN-2227): add CI compliance gates for omniintelligence (#108)
Add detect_secrets and quality_gate jobs to ci.yaml, rewrite ci-summary
to distinguish "skipped by policy" from misconfiguration, upgrade
required-checks.yaml to v2 schema with gates as single source of truth,
and generate .secrets.baseline for detect-secrets==1.5.0.

--- a/.github/required-checks.yaml
+++ b/.github/required-checks.yaml
@@ -1,80 +1,146 @@
 ---
-# Required Status Checks for `main` Branch Protection
+# Required Status Checks for `main` Branch Protection (v2)
 #
-# This manifest documents the canonical list of required checks.
-# If you rename a CI job, you MUST update both this file and the
-# branch protection settings (Settings > Branches > main).
+# This manifest is the SINGLE SOURCE OF TRUTH for branch protection configuration.
+# The `gates` list defines the only operational contract -- these are the API-stable
+# check_names that branch protection rules reference.
 #
-# Added: OMN-2185
-# Last verified: 2026-02-13
-# Pattern: OMN-1876 (omniclaude PR #137)
+# INVARIANTS:
+# 1. Gate check_name values are API-stable. Renames require coordinated branch
+#    protection update (temp dual-require, merge, remove old).
+# 2. Individual job names inside gates can change freely without updating
+#    branch protection rules.
+# 3. The `gates` list is the only operational contract. The `checks` section
+#    is documentation only.
+#
+# Supersedes: v1 (OMN-2185) -- flat required_checks list
+# Added: OMN-2227
+# Last verified: 2026-02-15
+# Schema version: v2
 
-required_checks:
-  # -- Unconditional checks (always run on every PR) -------------------------
+schema_version: 2
 
+# ── Gates (operational contract for branch protection) ────────────────────────
+# These check_names are required in GitHub branch protection settings.
+# They are API-stable -- do NOT rename without the migration safety procedure.
+gates:
+  - check_name: "Quality Gate"
+    workflow_file: ci.yaml
+    workflow_job_key: quality-gate
+    rationale: >
+      Aggregates all unconditional governance checks: pre-commit, scope-alignment, contract-validation,
+      io-audit, cross-repo-validation, migration-freeze, check-handshake, detect-secrets. Replaces 8 individual
+      branch protection checks with a single stable gate.
+  - check_name: "CI Summary"
+    workflow_file: ci.yaml
+    workflow_job_key: ci-summary
+    rationale: >
+      Final aggregator for Quality Gate + path-filtered production code jobs (Lint, Type Check, Unit Tests).
+      REQUIRED because this repo uses path filtering -- ensures skipped jobs are distinguished as "skipped
+      by policy" vs "missing due to misconfiguration".
+# ── Checks (documentation only -- not used for branch protection) ─────────────
+# These are the individual jobs aggregated by Quality Gate.
+# Listed here for documentation and cross-referencing purposes only.
+checks:
   - name: "Pre-commit Hooks"
-    workflow: ci.yaml
-    job_id: pre-commit
-    conditional: false
-    rationale: "Comprehensive code quality validation (ruff, mypy, trailing whitespace, etc.)"
+    workflow_file: ci.yaml
+    workflow_job_key: pre-commit
+    aggregated_by: "Quality Gate"
 
   - name: "Scope Alignment"
-    workflow: ci.yaml
-    job_id: scope-alignment
-    conditional: false
-    rationale: "Validates CI path filters match pre-commit hook patterns - catches configuration drift"
+    workflow_file: ci.yaml
+    workflow_job_key: scope-alignment
+    aggregated_by: "Quality Gate"
 
   - name: "Contract Validation"
-    workflow: ci.yaml
-    job_id: contract-validation
-    conditional: false
-    rationale: "Validates ONEX contract YAML files - structural correctness of node contracts"
+    workflow_file: ci.yaml
+    workflow_job_key: contract-validation
+    aggregated_by: "Quality Gate"
 
   - name: "I/O Audit"
-    workflow: ci.yaml
-    job_id: io-audit
-    conditional: false
-    rationale: "ONEX node purity enforcement - compute nodes must not contain forbidden I/O patterns"
+    workflow_file: ci.yaml
+    workflow_job_key: io-audit
+    aggregated_by: "Quality Gate"
 
   - name: "Cross-Repo Validation"
-    workflow: ci.yaml
-    job_id: cross-repo-validation
-    conditional: false
-    rationale: "ARCH-002: no direct Kafka imports in nodes/ (must use Protocol abstractions)"
+    workflow_file: ci.yaml
+    workflow_job_key: cross-repo-validation
+    aggregated_by: "Quality Gate"
 
   - name: "Migration Freeze Check"
-    workflow: ci.yaml
-    job_id: migration-freeze
-    conditional: false
-    rationale: "Blocks new migrations during DB-per-repo refactor (OMN-2055)"
+    workflow_file: ci.yaml
+    workflow_job_key: migration-freeze
+    aggregated_by: "Quality Gate"
 
   - name: "Verify Architecture Handshake"
-    workflow: ci.yaml
-    job_id: check-handshake
-    conditional: true
-    condition: "Skipped on fork PRs (no fork PRs accepted for this repo)"
-    rationale: "Cross-repo architecture handshake with omnibase_core is current"
+    workflow_file: ci.yaml
+    workflow_job_key: check-handshake
+    aggregated_by: "Quality Gate"
+    note: "Skipped on fork PRs (acceptable -- no fork PRs accepted for this repo)"
 
-  # -- Aggregator (absorbs path-filtered conditional checks) ------------------
+  - name: "Detect Secrets"
+    workflow_file: ci.yaml
+    workflow_job_key: detect-secrets
+    aggregated_by: "Quality Gate"
 
-  - name: "CI Summary"
-    workflow: ci.yaml
-    job_id: ci-summary
-    conditional: false  # uses if: always() so it always runs
-    rationale: "Aggregator for path-filtered checks (Lint, Type Check, Unit Tests). These get 'skipped'
-      on docs-only PRs. CI Summary treats skipped as acceptable for path-filtered jobs."
+  - name: "Lint"
+    workflow_file: ci.yaml
+    workflow_job_key: lint
+    aggregated_by: "CI Summary"
+    note: "Path-filtered via Detect Changes -- skipped on docs-only PRs"
 
-# -- Explicitly excluded from required checks --------------------------------
+  - name: "Type Check"
+    workflow_file: ci.yaml
+    workflow_job_key: type-check
+    aggregated_by: "CI Summary"
+    note: "Path-filtered via Detect Changes -- skipped on docs-only PRs"
+
+  - name: "Unit Tests"
+    workflow_file: ci.yaml
+    workflow_job_key: test-unit
+    aggregated_by: "CI Summary"
+    note: "Path-filtered via Detect Changes -- skipped on docs-only PRs"
+
+# ── Explicitly excluded from required checks ──────────────────────────────────
+# These checks run in CI but are NOT configured as required status checks in
+# branch protection. They are either aggregated by a gate or informational only.
 excluded_checks:
   - name: "Detect Changes"
-    reason: "Path-filter helper job - outputs whether production code changed. Not a correctness check."
+    workflow_file: ci.yaml
+    reason: "Path-filter helper job -- outputs whether production code changed. Not a correctness check."
+
+  - name: "Pre-commit Hooks"
+    reason: "Aggregated by Quality Gate (v2). No longer a direct branch protection check."
+
+  - name: "Scope Alignment"
+    reason: "Aggregated by Quality Gate (v2)."
+
+  - name: "Contract Validation"
+    reason: "Aggregated by Quality Gate (v2)."
+
+  - name: "I/O Audit"
+    reason: "Aggregated by Quality Gate (v2)."
+
+  - name: "Cross-Repo Validation"
+    reason: "Aggregated by Quality Gate (v2)."
+
+  - name: "Migration Freeze Check"
+    reason: "Aggregated by Quality Gate (v2)."
+
+  - name: "Verify Architecture Handshake"
+    reason: "Aggregated by Quality Gate (v2)."
+
   - name: "Lint"
-    reason: "Path-filtered via Detect Changes. Gets 'skipped' on docs-only PRs. Covered by CI Summary."
+    reason: "Path-filtered. Aggregated by CI Summary."
+
   - name: "Type Check"
-    reason: "Path-filtered via Detect Changes. Gets 'skipped' on docs-only PRs. Covered by CI Summary."
+    reason: "Path-filtered. Aggregated by CI Summary."
+
   - name: "Unit Tests"
-    reason: "Path-filtered via Detect Changes. Gets 'skipped' on docs-only PRs. Covered by CI Summary."
+    reason: "Path-filtered. Aggregated by CI Summary."
+
   - name: "claude"
     reason: "Claude Code bot (claude.yml). Triggered by @claude mentions, not PR CI."
+
   - name: "Dependabot"
     reason: "Dependabot compatibility score. Informational, not a correctness gate."
