--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -616,122 +616,230 @@ jobs:
           ./omnibase_core/architecture-handshakes/check-handshake.sh ./omnibase_core
           echo "::endgroup::"
 
-  # Summary job - aggregates all job results
-  ci-summary:
-    name: CI Summary
+  # ============================================================================
+  # Detect Secrets - Baseline security scan (OMN-2227)
+  # ============================================================================
+  # Uses detect-secrets-hook for proper baseline comparison (handles type+hash equality)
+  detect-secrets:
+    name: Detect Secrets
     runs-on: ubuntu-latest
-    needs: [changes, pre-commit, scope-alignment, lint, type-check, test-unit, contract-validation, io-audit, cross-repo-validation, migration-freeze, check-handshake]
+    timeout-minutes: 5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      # detect-secrets is a CI-only scanning tool, not a project dependency.
+      # Installed via pip (not uv) because it is not declared in pyproject.toml.
+      - name: Install detect-secrets
+        run: pip install detect-secrets==1.5.0
+
+      - name: Run detect-secrets-hook
+        run: |
+          # Use detect-secrets-hook with baseline for proper CI enforcement.
+          # detect-secrets-hook compares findings against the baseline using the
+          # full equality model (hashed_secret + type), and exits non-zero only
+          # for NEW secrets not already baselined.
+          #
+          # Excludes: uv.lock (dependency hashes), .venv/, test fixtures,
+          # .git/, .secrets.baseline (contains hashed values that self-trigger),
+          # workflow YAML (references "secret" in config context)
+          set +e
+          git ls-files -z | xargs -0 detect-secrets-hook \
+            --baseline .secrets.baseline \
+            --exclude-files 'uv\.lock' \
+            --exclude-files '\.venv/' \
+            --exclude-files 'tests/fixtures/' \
+            --exclude-files '\.git/' \
+            --exclude-files '\.secrets\.baseline' \
+            --exclude-files '\.github/workflows/.*\.ya?ml'  # All workflow YAML legitimately references secrets.* context; individual file exclusions would go stale
+          HOOK_EXIT=$?
+          set -e
+
+          if [[ $HOOK_EXIT -eq 0 ]]; then
+            echo "## Secrets Scan" >> $GITHUB_STEP_SUMMARY
+            echo "No new secrets detected (all findings are baselined)." >> $GITHUB_STEP_SUMMARY
+          else
+            echo "## New Secrets Detected" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "detect-secrets-hook found secrets not present in .secrets.baseline." >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "If these are false positives, regenerate the baseline:" >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
+            echo 'detect-secrets scan --exclude-files "uv\.lock" --exclude-files "\.venv/" --exclude-files "tests/fixtures/" --exclude-files "\.git/" --exclude-files "\.secrets\.baseline" --exclude-files "\.github/workflows/.*\.ya?ml" --force-use-all-plugins > .secrets.baseline' >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
+            exit 1
+          fi
+
+  # ============================================================================
+  # Quality Gate - Aggregates all unconditional governance checks (OMN-2227)
+  # ============================================================================
+  # API-STABLE check_name: "Quality Gate"
+  # This is the single required check for branch protection that covers all
+  # unconditional governance jobs. Individual job names inside this gate can
+  # change without updating branch protection rules.
+  quality-gate:
+    name: Quality Gate
+    runs-on: ubuntu-latest
+    needs: [pre-commit, scope-alignment, contract-validation, io-audit, cross-repo-validation, migration-freeze, check-handshake, detect-secrets]
     if: always()
 
     steps:
-      - name: Check results
+      - name: Evaluate quality checks
         run: |
+          echo "## Quality Gate Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+
           precommit="${{ needs.pre-commit.result }}"
           scopealign="${{ needs.scope-alignment.result }}"
-          lint="${{ needs.lint.result }}"
-          typecheck="${{ needs.type-check.result }}"
-          unittest="${{ needs.test-unit.result }}"
           contracts="${{ needs.contract-validation.result }}"
           ioaudit="${{ needs.io-audit.result }}"
           crossrepo="${{ needs.cross-repo-validation.result }}"
           migrationfreeze="${{ needs.migration-freeze.result }}"
           handshake="${{ needs.check-handshake.result }}"
-          production_code_changed="${{ needs.changes.outputs.production_code }}"
+          secrets="${{ needs.detect-secrets.result }}"
 
-          # Status emoji mapping
-          get_status_icon() {
-            case "$1" in
-              success) echo ":white_check_mark:" ;;
-              failure) echo ":x:" ;;
-              cancelled) echo ":no_entry_sign:" ;;
-              skipped) echo ":fast_forward:" ;;
-              *) echo ":question:" ;;
-            esac
-          }
+          # Report each check
+          echo "| Check | Result |" >> $GITHUB_STEP_SUMMARY
+          echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Pre-commit Hooks | $precommit |" >> $GITHUB_STEP_SUMMARY
+          echo "| Scope Alignment | $scopealign |" >> $GITHUB_STEP_SUMMARY
+          echo "| Contract Validation | $contracts |" >> $GITHUB_STEP_SUMMARY
+          echo "| I/O Audit | $ioaudit |" >> $GITHUB_STEP_SUMMARY
+          echo "| Cross-Repo Validation | $crossrepo |" >> $GITHUB_STEP_SUMMARY
+          echo "| Migration Freeze | $migrationfreeze |" >> $GITHUB_STEP_SUMMARY
+          echo "| Architecture Handshake | $handshake |" >> $GITHUB_STEP_SUMMARY
+          echo "| Detect Secrets | $secrets |" >> $GITHUB_STEP_SUMMARY
 
-          # Check if a job result is acceptable for CI to pass
-          #
-          # Status handling logic:
-          #   - success:   Always acceptable - job completed without errors
-          #   - skipped:   Acceptable ONLY for production code jobs when no relevant files changed
-          #                (lint, type-check, test-unit use path filtering via changes job)
-          #   - cancelled: Never acceptable - indicates workflow was manually stopped or timed out
-          #   - failure:   Never acceptable - job encountered errors
-          #
-          # Args:
-          #   $1 - Job result status (success|failure|cancelled|skipped)
-          #   $2 - Whether this is a production code job with path filtering (true|false)
-          is_acceptable() {
-            local result="$1"
-            local is_production_code_job="$2"
+          # Gate logic: all unconditional checks must pass.
+          # check-handshake is skipped on fork PRs -- treat skipped as acceptable.
+          FAILED=false
 
-            # Explicitly reject cancelled status - workflow was interrupted
-            if [[ "$result" == "cancelled" ]]; then
-              return 1
+          for check in "$precommit" "$scopealign" "$contracts" "$ioaudit" "$crossrepo" "$migrationfreeze" "$secrets"; do
+            if [[ "$check" != "success" ]]; then
+              FAILED=true
             fi
+          done
 
-            # Always accept success
-            if [[ "$result" == "success" ]]; then
-              return 0
-            fi
+          # Handshake: accept success or skipped (fork PRs)
+          if [[ "$handshake" != "success" ]] && [[ "$handshake" != "skipped" ]]; then
+            FAILED=true
+          fi
 
-            # For production code jobs, skipped is acceptable when no relevant files changed
-            if [[ "$is_production_code_job" == "true" ]] && [[ "$result" == "skipped" ]] && [[ "$production_code_changed" != "true" ]]; then
-              return 0
-            fi
+          if [[ "$FAILED" == "false" ]]; then
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "**Quality Gate: PASSED**" >> $GITHUB_STEP_SUMMARY
+            echo "All governance checks passed."
+            exit 0
+          else
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "**Quality Gate: FAILED**" >> $GITHUB_STEP_SUMMARY
+            echo "Quality gate failed. See individual check results above."
+            exit 1
+          fi
 
-            # All other statuses (failure, unexpected) are not acceptable
-            return 1
-          }
+  # ============================================================================
+  # CI Summary - Final aggregator for all gates (OMN-2227)
+  # ============================================================================
+  # API-STABLE check_name: "CI Summary"
+  # Aggregates Quality Gate + path-filtered production code jobs.
+  # REQUIRED for this repo because it uses path filtering -- skipped path-filtered
+  # jobs need an aggregator that distinguishes "skipped by policy" from
+  # "missing due to misconfiguration".
+  ci-summary:
+    name: CI Summary
+    runs-on: ubuntu-latest
+    needs: [changes, quality-gate, lint, type-check, test-unit]
+    if: always()
 
-          echo "## CI Results" >> $GITHUB_STEP_SUMMARY
+    steps:
+      - name: Evaluate all gates
+        run: |
+          echo "## CI Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
-          # Note if production code jobs were skipped due to path filter
-          if [[ "$production_code_changed" != "true" ]]; then
-            echo "> **Note:** Production code jobs (Lint, Type Check, Unit Tests) were skipped - no changes in \`tools/\`, \`utils/\`, or \`runtime/\` directories" >> $GITHUB_STEP_SUMMARY
+          quality="${{ needs.quality-gate.result }}"
+          lint="${{ needs.lint.result }}"
+          typecheck="${{ needs.type-check.result }}"
+          unittest="${{ needs.test-unit.result }}"
+          production_code_changed="${{ needs.changes.outputs.production_code }}"
+
+          # ── Gate results table ──────────────────────────────────────────────
+          echo "| Gate / Job | Result | Notes |" >> $GITHUB_STEP_SUMMARY
+          echo "|------------|--------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Quality Gate | $quality | Aggregates all unconditional governance checks |" >> $GITHUB_STEP_SUMMARY
+
+          # ── Path-filtered job evaluation ────────────────────────────────────
+          # These jobs use path filtering via the changes job. When no production
+          # code files changed, they are legitimately skipped ("skipped by policy").
+          # If production code DID change but the job is skipped or missing, that
+          # indicates misconfiguration.
+
+          FAILED=false
+
+          # Quality Gate must always pass
+          if [[ "$quality" != "success" ]]; then
+            FAILED=true
+          fi
+
+          evaluate_path_filtered_job() {
+            local job_name="$1"
+            local result="$2"
+
+            if [[ "$result" == "success" ]]; then
+              echo "| $job_name | $result | Ran and passed |" >> $GITHUB_STEP_SUMMARY
+            elif [[ "$result" == "skipped" ]] && [[ "$production_code_changed" != "true" ]]; then
+              echo "| $job_name | $result | Skipped by policy (no production code changes) |" >> $GITHUB_STEP_SUMMARY
+            elif [[ "$result" == "skipped" ]] && [[ "$production_code_changed" == "true" ]]; then
+              echo "| $job_name | $result | **MISCONFIGURATION**: production code changed but job was skipped |" >> $GITHUB_STEP_SUMMARY
+              FAILED=true
+            else
+              echo "| $job_name | $result | Failed |" >> $GITHUB_STEP_SUMMARY
+              FAILED=true
+            fi
+          }
+
+          evaluate_path_filtered_job "Lint" "$lint"
+          evaluate_path_filtered_job "Type Check" "$typecheck"
+          evaluate_path_filtered_job "Unit Tests" "$unittest"
+
+          echo "" >> $GITHUB_STEP_SUMMARY
+
+          # ── Skip enumeration ────────────────────────────────────────────────
+          SKIPS=""
+          if [[ "$lint" == "skipped" ]] && [[ "$production_code_changed" != "true" ]]; then
+            SKIPS="${SKIPS}\n- **Lint**: skipped by policy (no changes in tools/, utils/, runtime/)"
+          fi
+          if [[ "$typecheck" == "skipped" ]] && [[ "$production_code_changed" != "true" ]]; then
+            SKIPS="${SKIPS}\n- **Type Check**: skipped by policy (no changes in tools/, utils/, runtime/)"
+          fi
+          if [[ "$unittest" == "skipped" ]] && [[ "$production_code_changed" != "true" ]]; then
+            SKIPS="${SKIPS}\n- **Unit Tests**: skipped by policy (no changes in tools/, utils/, runtime/)"
+          fi
+
+          if [[ -n "$SKIPS" ]]; then
+            echo "### Skipped Jobs (by policy)" >> $GITHUB_STEP_SUMMARY
+            echo -e "$SKIPS" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
           fi
 
-          # Results table with status icons
-          echo "| Job | Status | Result |" >> $GITHUB_STEP_SUMMARY
-          echo "|-----|:------:|--------|" >> $GITHUB_STEP_SUMMARY
-          echo "| Pre-commit Hooks | $(get_status_icon $precommit) | \`$precommit\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Scope Alignment | $(get_status_icon $scopealign) | \`$scopealign\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Lint | $(get_status_icon $lint) | \`$lint\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Type Check | $(get_status_icon $typecheck) | \`$typecheck\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Unit Tests | $(get_status_icon $unittest) | \`$unittest\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Contract Validation | $(get_status_icon $contracts) | \`$contracts\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| I/O Audit | $(get_status_icon $ioaudit) | \`$ioaudit\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Cross-Repo Validation | $(get_status_icon $crossrepo) | \`$crossrepo\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Migration Freeze | $(get_status_icon $migrationfreeze) | \`$migrationfreeze\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Architecture Handshake | $(get_status_icon $handshake) | \`$handshake\` |" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-
-          # Overall status - production code jobs can be skipped if no relevant changes
-          # check-handshake is skipped on fork PRs (acceptable when skipped)
-          is_handshake_acceptable() {
-            local result="$1"
-            [[ "$result" == "success" ]] || [[ "$result" == "skipped" ]]
-          }
-
-          if is_acceptable "$precommit" "false" && \
-             is_acceptable "$scopealign" "false" && \
-             is_acceptable "$lint" "true" && \
-             is_acceptable "$typecheck" "true" && \
-             is_acceptable "$unittest" "true" && \
-             is_acceptable "$contracts" "false" && \
-             is_acceptable "$ioaudit" "false" && \
-             is_acceptable "$crossrepo" "false" && \
-             is_acceptable "$migrationfreeze" "false" && \
-             is_handshake_acceptable "$handshake"; then
-            echo "### :rocket: All CI checks passed!" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
+          # ── Final verdict ───────────────────────────────────────────────────
+          if [[ "$FAILED" == "false" ]]; then
+            echo "### All CI gates passed" >> $GITHUB_STEP_SUMMARY
             echo "Ready for review and merge." >> $GITHUB_STEP_SUMMARY
             exit 0
           else
-            echo "### :warning: CI checks failed" >> $GITHUB_STEP_SUMMARY
+            echo "### CI gates FAILED" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
-            echo "Please review the failed jobs above and fix any issues." >> $GITHUB_STEP_SUMMARY
+            echo "Gate results:" >> $GITHUB_STEP_SUMMARY
+            echo "  Quality Gate: $quality" >> $GITHUB_STEP_SUMMARY
+            echo "  Lint: $lint" >> $GITHUB_STEP_SUMMARY
+            echo "  Type Check: $typecheck" >> $GITHUB_STEP_SUMMARY
+            echo "  Unit Tests: $unittest" >> $GITHUB_STEP_SUMMARY
             exit 1
           fi
