--- a/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
@@ -34,12 +34,10 @@ node_type: "EFFECT_GENERIC"
 status: "active"
 
 # Description
-description: >
-  Effect node for orchestrating pattern learning from Claude Code session traces.
-  Receives pattern-learning command events when a session ends, extracts patterns
-  from execution traces, runs the learning pipeline, and emits pattern-learned
-  events for downstream persistence by the pattern storage effect node.
-
+description: >-
+  Effect node for orchestrating pattern learning from Claude Code session traces. Receives pattern-learning
+  command events when a session ends, extracts patterns from execution traces, runs the learning pipeline,
+  and emits pattern-learned events for downstream persistence by the pattern storage effect node. #magic___^_^___line
 # Strongly typed I/O models
 input_model:
   name: "ModelEventEnvelope"
@@ -100,8 +98,8 @@ event_bus:
   subscribe_topic_metadata:
     "{env}.onex.cmd.omniintelligence.pattern-learning.v1":
       schema_ref: "omniintelligence.nodes.node_claude_hook_event_effect.models.model_output.ModelPatternLearningCommand"
-      description: "Pattern learning command events triggered when a Claude Code session
-        ends. Contains session_id, correlation_id, and execution trace data."
+      description: "Pattern learning command events triggered when a Claude Code session ends. Contains
+        session_id, correlation_id, and execution trace data."
       content_type: "application/json"
 
   # Metadata for published topics
@@ -114,8 +112,8 @@ event_bus:
   publish_topic_metadata:
     "{env}.onex.evt.omniintelligence.pattern-learned.v1":
       schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternStorageInput"
-      description: "Learned pattern events containing extracted pattern data ready
-        for persistence by the pattern storage effect node."
+      description: "Learned pattern events containing extracted pattern data ready for persistence by
+        the pattern storage effect node."
       content_type: "application/json"
 
 # =============================================================================
@@ -173,9 +171,8 @@ idempotency:
   enabled: true
   strategy: "event_id_tracking"
   hash_fields: ["session_id", "correlation_id"]
-  description: "Each learning request is keyed by (session_id, correlation_id).
-    Re-processing the same session-end event is idempotent - duplicate learning
-    requests are detected and skipped."
+  description: "Each learning request is keyed by (session_id, correlation_id). Re-processing the same
+    session-end event is idempotent - duplicate learning requests are detected and skipped."
 
 # =============================================================================
 # CAPABILITIES
