fix(OMN-2253): resolve CI failures and CodeRabbit review findings
- Replace os.getenv() with Pydantic DatabaseSettings class (CodeRabbit major)
- Guard pool cleanup if adapter creation fails in lifespan
- Exclude api/ from ARCH-002 transport import check (infrastructure layer)
- Replace hex-looking test fixture strings to avoid detect-secrets false positives
- Type get_adapter as Callable[[], Awaitable[...]] instead of Any
- Add return type annotation to contract fixture
- Regenerate .secrets.baseline

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -434,6 +434,7 @@ repos:
       - id: validate-no-transport-imports
         name: validate-no-transport-imports (ARCH-002)
         entry: uv run python scripts/validate_no_transport_imports.py --exclude src/omniintelligence/runtime
+          --exclude src/omniintelligence/api
         language: system
         pass_filenames: false
         types: [python]
