--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -433,7 +433,7 @@ repos:
       # --------------------------------------------------------------------------
       - id: validate-no-transport-imports
         name: validate-no-transport-imports (ARCH-002)
-        entry: uv run python scripts/validate_no_transport_imports.py --exclude src/omniintelligence/runtime
+        entry: uv run python scripts/validate_no_transport_imports.py --exclude src/omniintelligence/runtime --exclude src/omniintelligence/api
         language: system
         pass_filenames: false
         types: [python]
